# agente-blink

./: .dockerignore  .env.example  .gitignore  00-INDEX.md  AUDITAR_BUG_C21.command  BATCH_FERIAS_JULHO.command  BATCH_REAGENDAR_08-06-2026.md  BLINK_STUDIO.command  BRIEFING_FACTO_ACAO_IMEDIATA.docx  BRIEFING_FACTO_ACAO_IMEDIATA.md  BUGS_MAPEAMENTO_DEFINITIVO_08-06-2026.md  BUG_C59_DUPLICATAS_A_LIMPAR.csv  CANCELAMENTOS_2026_ENCAIXE.md  CAPTACAO_JUNHO_PENDENTES.md  CLAUDE.md  Como_Incluir_Agenda_Medware_no_Claude_Cowork.docx  Dockerfile  Dockerfile.voice  HANDOFF_01-06_NOITE_PARA_02-06-2026.md  HANDOFF_01-06_SESSAO_AUTONOMA.md  HANDOFF_02-06_MANHA_PARA_TARDE_2026.md  HANDOFF_31-05_NOITE_PARA_01-06-2026.md  HANDOFF_31-05_PARA_01-06-2026.md  HANDOFF_ATUAL.md  INSTALAR_BLINK_ATENDIMENTO_MCP.command  INSTALAR_LIA_ENGINEER.command  Kommo_Lia_Roteamento_O_Que_Configurar.md  LOG_DIAGNOSTICO_MEDWARE_CPU_17-06-2026.md  MAPA_ARQUITETURA_FUNIS.md  MAPA_OPORTUNIDADES_LEADS_FRIO.md  MEMORIA_ATIVA_CLAUDE.docx  MEMORIA_ATIVA_CLAUDE.md  MENSAGEM_SUPORTE_MEDWARE_10-06-2026.md  META_TEMPLATES_PARA_SUBMISSAO.md  MIGRACAO_8133_Passos_Kommo.md  MODELOS_LEAD_FRIO_PARA_APROVAR.md  OBSIDIAN_SETUP.md  PLANO_ATIVACAO_LEADS_FRIO_08_06_2026.md  PLANO_REESTRUTURACAO_MCP_BLINK.md  PLANO_UNIFICACAO_8133.docx  (+69 more)
.obsidian/: app.json  (+1 more)
mcp_servers/: README.md  pyproject.toml
mcp_servers/blink_atendimento/: __init__.py  server.py  test_server.py
mcp_servers/blink_calendar/: __init__.py  models.py  server.py  test_server.py
mcp_servers/blink_host/: __init__.py  orchestrator.py  test_orchestrator.py
(+388 files in other folders)
