[project]
name = "blink-mcp-servers"
version = "1.0.0"
description = "Servidores MCP da Blink Oftalmologia — reestruturação Lia conforme livro Dominando MCP"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "fakeredis>=2.20.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["blink_calendar", "blink_knowledge", "blink_state", "blink_medware", "blink_kommo", "blink_whatsapp", "blink_host"]
python_files = "test_*.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["blink_calendar", "blink_knowledge", "blink_state", "blink_medware", "blink_kommo", "blink_whatsapp", "blink_host"]
